# ipsort

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  Makefile  README.md  index.html  ipsort.1.scd  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vcheck.bash
.github/: dependabot.yml
.github/workflows/: codeql.yml  default.yml
src/: blocks.rs  classify.rs  lib.rs  main.rs  output.rs  parse.rs  sort.rs
tests/: integration.rs
