[package]
name = "ipsort"
version = "1.2.0"
edition = "2024"

description = "Versitile ip address sorting tool"
homepage = "https://ipsort.dev"
keywords = ["cidr", "cli", "ip", "network", "sort"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mfinelli/ipsort"

categories = [
  "command-line-utilities",
  "development-tools",
  "network-programming",
  "text-processing",
  "value-formatting",
]

include = [
  "/CHANGELOG.md",
  "/Cargo.*",
  "/LICENSE",
  "/README.md",
  "/src/*",
  "/tests/*",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5" }
ipnet = { version = "2.12.0" }

[dev-dependencies]
assert_cmd = { version = "2.2.2" }
predicates = { version = "3.1.4" }
